jomini_derive/tests/compile-fail/duplicated_non_vec.rs
#[allow(dead_code)]
use jomini_derive::JominiDeserialize;

#[derive(JominiDeserialize)]
pub struct Model {
    #[jomini(duplicated)]
    field: u32,
}

fn main() {}
